<resources>
    <string name="app_name">Calculator</string>

    <string name="action_history">History</string>

    <string name="action_theme">Choose theme</string>
    <string name="action_theme_light">Light</string>
    <string name="action_theme_dark">Dark</string>
    <string name="action_theme_default">System default</string>

    <string name="action_about">About</string>
    <string name="about_text_name"     translatable="false">Material Calculator</string>
    <string name="about_text_dev_name">By Oleg Ryabyshev</string>
    <string name="about_text_telegram" translatable="false">telegram - @OlegRyabyshev</string>
    <string name="about_text_email"    translatable="false">email - oryabyshev@gmail.com</string>
    <string name="about_text_version"  translatable="false">Ver. 1.0</string>

    <string name="ac"               translatable="false">AC</string>
    <string name="del"              translatable="false">DEL</string>
    <string name="percent"          translatable="false">%</string>
    <string name="divide"           translatable="false">/</string>
    <string name="multiply"         translatable="false">×</string>
    <string name="minus"            translatable="false">-</string>
    <string name="plus"             translatable="false">+</string>
    <string name="dot"              translatable="false">.</string>
    <string name="plus_minus"       translatable="false">+-</string>
    <string name="equals"           translatable="false">=</string>

    <string name="button0"          translatable="false">0</string>
    <string name="button1"          translatable="false">1</string>
    <string name="button2"          translatable="false">2</string>
    <string name="button3"          translatable="false">3</string>
    <string name="button4"          translatable="false">4</string>
    <string name="button5"          translatable="false">5</string>
    <string name="button6"          translatable="false">6</string>
    <string name="button7"          translatable="false">7</string>
    <string name="button8"          translatable="false">8</string>
    <string name="button9"          translatable="false">9</string>
    <string name="starting_input"   translatable="false">0</string>
</resources>