<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:fontFamily="sans-serif-thin"
        android:gravity="right|top"
        android:text="@string/enter_calculation"
        android:textColor="#000000"
        android:textIsSelectable="true"
        android:textSize="50sp"
        tools:ignore="RtlHardcoded" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="20dp"
        android:layout_weight="1"
        android:gravity="bottom|center_horizontal">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/marginOfRow"
            android:layout_marginEnd="@dimen/marginOfRow">

            <Button
                android:id="@+id/buttonAC"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_margin="@dimen/marginOfButton"
                android:layout_weight="1"
                android:backgroundTint="@color/colorPrimary"
                android:fontFamily="sans-serif-black"
                android:text="@string/ac"
                android:textColor="#ffffff"
                android:textSize="@dimen/buttonFontSize" />

            <Button
                android:id="@+id/buttonDel"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_margin="@dimen/marginOfButton"
                android:layout_weight="1"
                android:text="@string/del"
                android:textSize="@dimen/buttonFontSize" />

            <Button
                android:id="@+id/buttonPercent"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_margin="@dimen/marginOfButton"
                android:layout_weight="1"
                android:text="@string/percent"
                android:textSize="@dimen/buttonFontSize" />

            <Button
                android:id="@+id/buttonDivide"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_margin="@dimen/marginOfButton"
                android:layout_weight="1"
                android:text="@string/divide"
                android:textSize="@dimen/buttonFontSize" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/marginOfRow"
            android:layout_marginEnd="@dimen/marginOfRow">

            <Button
                android:id="@+id/button7"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_margin="@dimen/marginOfButton"
                android:layout_weight="1"
                android:text="@string/button7"
                android:textSize="@dimen/buttonFontSize" />

            <Button
                android:id="@+id/button8"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_margin="@dimen/marginOfButton"
                android:layout_weight="1"
                android:text="@string/button8"
                android:textSize="@dimen/buttonFontSize" />

            <Button
                android:id="@+id/button9"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_margin="@dimen/marginOfButton"
                android:layout_weight="1"
                android:text="@string/button9"
                android:textSize="@dimen/buttonFontSize" />

            <Button
                android:id="@+id/buttonMultiply"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_margin="@dimen/marginOfButton"
                android:layout_weight="1"
                android:text="@string/multiply"
                android:textSize="@dimen/buttonFontSize" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/marginOfRow"
            android:layout_marginEnd="@dimen/marginOfRow">

            <Button
                android:id="@+id/button4"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_margin="@dimen/marginOfButton"
                android:layout_weight="1"
                android:text="@string/button4"
                android:textSize="@dimen/buttonFontSize" />

            <Button
                android:id="@+id/button5"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_margin="@dimen/marginOfButton"
                android:layout_weight="1"
                android:text="@string/button5"
                android:textSize="@dimen/buttonFontSize" />

            <Button
                android:id="@+id/button6"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_margin="@dimen/marginOfButton"
                android:layout_weight="1"
                android:text="@string/button6"
                android:textSize="@dimen/buttonFontSize" />

            <Button
                android:id="@+id/buttonMinus"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_margin="@dimen/marginOfButton"
                android:layout_weight="1"
                android:text="@string/minus"
                android:textSize="@dimen/buttonFontSize" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/marginOfRow"
            android:layout_marginEnd="@dimen/marginOfRow">

            <Button
                android:id="@+id/button1"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_margin="@dimen/marginOfButton"
                android:layout_weight="1"
                android:text="@string/button1"
                android:textSize="@dimen/buttonFontSize" />

            <Button
                android:id="@+id/button2"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_margin="@dimen/marginOfButton"
                android:layout_weight="1"
                android:text="@string/button2"
                android:textSize="@dimen/buttonFontSize" />

            <Button
                android:id="@+id/button3"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_margin="@dimen/marginOfButton"
                android:layout_weight="1"
                android:text="@string/button3"
                android:textSize="@dimen/buttonFontSize" />

            <Button
                android:id="@+id/buttonPlus"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_margin="@dimen/marginOfButton"
                android:layout_weight="1"
                android:text="@string/plus"
                android:textSize="@dimen/buttonFontSize" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/marginOfRow"
            android:layout_marginEnd="@dimen/marginOfRow">

            <Button
                android:id="@+id/buttonSettings"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_margin="@dimen/marginOfButton"
                android:layout_weight="1"
                android:text="@string/settings"
                android:textSize="@dimen/buttonFontSize" />

            <Button
                android:id="@+id/button0"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_margin="@dimen/marginOfButton"
                android:layout_weight="1"
                android:text="@string/button0"
                android:textSize="@dimen/buttonFontSize" />

            <Button
                android:id="@+id/buttonDot"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_margin="@dimen/marginOfButton"
                android:layout_weight="1"
                android:text="@string/dot"
                android:textSize="@dimen/buttonFontSize" />

            <Button
                android:id="@+id/buttonEquals"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_margin="@dimen/marginOfButton"
                android:layout_weight="1"
                android:backgroundTint="@color/colorPrimary"

                android:text="@string/equals"
                android:textColor="#ffffff"
                android:textSize="@dimen/buttonFontSize" />
        </TableRow>
    </TableLayout>
</LinearLayout>