<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimary">

    <TextView
        android:id="@+id/about_text_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_text_name"
        android:gravity="center_horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4" />

    <TextView
        android:id="@+id/about_text_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_text_dev_name"
        android:gravity="center_horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/about_text_1"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/about_text_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_text_telegram"
        android:gravity="center_horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/about_text_2"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/about_text_4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_text_email"
        android:gravity="center_horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/about_text_3"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/about_text_5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_text_version"
        android:gravity="center_horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/about_text_4"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>